fixed spacing issues in index and productview

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     padding:10px;
 }
 .main{
-    min-height:450px;
+    min-height:550px;
+    margin-bottom:50px;
 }
 .no-padding{
     padding:0;
@@ -22,14 +23,15 @@
 .front-products img, .responsive-image{
     width:100%;
 }
-.front-products .price{
-    font-size:22px;
-    font-weight:bold;
+
+.price{
+      font-weight:bold;
 }
 .price::before{
     content:"$";
     display:inline-block;
-    margin-right:5px;
+    margin-right:3px;
+    margin-left:3px;
 }
 .flex-end{
     display:flex;
@@ -39,4 +41,7 @@
 }
 .product-detail{
     min-height:300px;
+}
+.product-buttons{
+    margin-top:10px;
 }
